# lorawan-fieldtest-helium

./: .gitignore  CHANGELOG.md  Dockerfile  README.md  docker-compose.yml  env.example  main.py  pyproject.toml  requirements.txt  run_server.bat  test.db
app/: __main__.py  main.py
app/api/: endpoints.py
app/db/: database.py  models.py
app/schema/: schema.py
app/services/: build_response.py  process_packet.py
fastapi/: .dockerignore  pyproject.toml  pytest.ini
fastapi/app/db/: database.py
fastapi/app/services/: send_downlink.py
fastapi/tests/: test_packet_schema.py
fastapi_app/: Dockerfile  pyproject.toml
fastapi_app/app/: __main__.py
fastapi_app/app/api/: endpoints.py
fastapi_app/app/core/: config.py
fastapi_app/app/db/: database.py
fastapi_app/app/services/: parse_port1.py
fastapi_app/tests/: test.json  test_decode.py  test_distance_calc.py  test_process_packets.py
ngninx/conf.d/certs/: README.md
ngninx/templates/: nginx.conf.template
scripts/: enable-port.ps1  open_db_port5432.yaml
test/: test_api_endpoint.py  test_database.py  test_send_downlink.py
